Dev (#268)
* initial commit

* feat: 초기 전역 프로젝트 세팅 (#10)

* chore(infra): PR이 이슈로 github projects에 등록되는 문제 수정

* feat/be : BaseEntity 생성  (#18)

* feat(be): BaseEntity 생성

* feat(be): BaseEntity 생성_formatter적용

* feat(be): 리뷰 엔티티 및 리뷰 사진 엔티티 생성 (#19)

* feat: review, reviewPhoto 엔티티 생성

* refactor: 코드 스타일 적용

* feat: 유저 객체 필드 생성

* refactor: @Column 추가

* feat: builder 추가

* feat(be) : user 기본 엔티티 구현 및 ERD설계에 맞게 enum 파일들 구현 (#21)

* feat(be): BaseEntity 생성

* feat(be): BaseEntity 생성_formatter적용

* feat(be): user 엔í기ë³기본엔티티 기본 구현 및 enum 파일들 도입

* feat(be): 배달 엔티티 생성 (#16)

* feat: Delivery 엔티티 및 DeliveryStatus enum 구현

* feat: BaseEntity 적용

* fix: enum 어노테이션 수정

* feat(be): 주문 엔티티 생성 및 주문 상태 정의 (#25)

* feat: Rider 프로필 구현 (#27)

Co-authored-by: Chaeruin <cms3604@naver.com>

* feat(be): User Repository / CustomerAddress / CustomerProfile 엔티티 구현 , User 엔티티에 비즈니스로직 임시추가 (#31)

* feat(be): BaseEntity 생성

* feat(be): BaseEntity 생성_formatter적용

* feat(be): 기초 ìUserRepository 구현

* feat(be): CustomerProfile 기초구현

* feat(be): CustomerAddress 기본구현

* fix(be) : RiderProfile List 임포트 문제 해결

* refactor(be): BaseEntity를 abstract class로 변경 (#34)

* feat(be): 주문 아이템 엔티티 생성 및 주문 필드 수정 (#36)

* feat(be): Enum 저장시 String 으로 저장

* feat(be): 주문 아이템 엔티티 생성

* refactor(be): 가격의 표현 범위 수정 및 파일 구조 변경

* 가격에 n% 할인율, 수수료 등이 적용될 것을 고려해 scale=2 로 변경
* 한 주문에 천만원이 넘어갈 것을 고려해 데이터 타입 크기 4바이트 -> 8바이트로 변경

* refactor(be): 의미가 적합한 변수명으로 변경

* feat(be): 카테고리 엔티티 구현 (#38)

* feat(be): 리뷰 등록 api (#42)

* review 컨트롤러, 생성용 dto 생성

* refactor: review entity user import

* ReviewService 생성

* ReviewRepository, ReviewPhotoRepository 생성

* feat: todo 추가, createReview 서비스, 컨트롤러 다듬기

* refactor: 스타일 정리

* test: createReview 테스트 - green

* test: test용 factory class 생성

* feat(be): 배달/라이더 자체 api 구현 (#41)

* feat: 라이더 상태 입력 dto 구현 및 엔티티 일부 수정

* feat: rider status update patch controller 구현

* fix: dto 네이밍 수정 및 필드 추가

* feat: 구현에 필요한 riderProfile repository 추가 구현

* feat: rider toggle status 변경 비즈니스 로직 구현

* feat: 